--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.18",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.8.0",
@@ -17,7 +18,9 @@
     "pdf-lib": "^1.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
     "react-pdf": "^10.3.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.12.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^4.1.18"
